--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
 * {
   box-sizing: border-box;
 }
 
 a {
+  color: inherit;
   text-decoration: none;
+}
+
+a:hover {
+  color: inherit;
 }
 
 body {
@@ -11,6 +18,17 @@ body {
    font-weight: normal;
    font-style: normal;
   line-height: 1;
+}
+
+button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
 
 h1 {
@@ -77,6 +95,13 @@ header input {
 .card-art {
   max-width: 250px;
   max-height: 250px;
+}
+
+.card-art-big {
+  min-height: 20vh;
+  max-height: 100vh;
+  min-width: fit-content;
+  max-width: fit-content;
 }
 
 .card-title {
@@ -177,6 +202,13 @@ text-indent: 2rem;
   max-height: 250px;
   mix-blend-mode: multiply;
   border-radius: 20%;
+}
+
+.monsterButtonMover {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column-reverse;
 }
 
 @media screen and (min-width: 800px){
