--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,5 @@
-@import 'bootstrap/dist/css/bootstrap.min.css';
-
 * {
   box-sizing: border-box;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:hover {
-  color: inherit;
 }
 
 body {
@@ -18,17 +7,6 @@ body {
    font-weight: normal;
    font-style: normal;
   line-height: 1;
-}
-
-button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
 }
 
 h1 {
@@ -43,107 +21,14 @@ h2 {
   border-radius: 20%;
 }
 
-header {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  background-color: rgb(180, 70, 70);
-  color: white;
-  padding: 1rem;
-}
-
-header a {
-  color: white;
-}
-
-header input {
-  font-family: 'Noto Serif', Georgia, serif;
-  font-weight: 100;
-  padding: 6px;
-  border: none;
-  font-size: large;
-  border-radius: 15px;
-}
-
-.container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: minmax(250px, auto);
-  grid-gap: 1rem;
-  margin: 0 auto;
-  max-width: 1200px;
-  padding: 1rem;
-}
-
-.card {
-  border: 1px solid lightgray;
-  border-radius: 1rem;
-  display: grid;
-  grid-template-rows: 2fr 1fr;
-}
-
-.card-image {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  background-color: rgba(240, 248, 255, 0.491);
-  border-radius: 1rem 1rem 0 0;
-  height: 250px;
-}
-
-.card-art {
-  max-width: 250px;
-  max-height: 250px;
-}
-
-.card-art-big {
-  min-height: 20vh;
-  max-height: 100vh;
-  min-width: fit-content;
-  max-width: fit-content;
-}
-
-.card-title {
-  background-color: #742727;
-  color: white;
-overflow: hidden;
-  height: 200px;
-  border-radius: 0 0 1rem 1rem;
-  margin: 0;
-  padding: 1rem;
-  text-align: center;
-}
-
-.card-title h3 {
-  font-weight: 300;
-}
-
 main {
   display: flex;
   justify-content: center;
 }
 
-.detcontainer {
-  padding-inline: 25%;
-  background-color: antiquewhite;
-  flex-direction: column;
-  margin: auto;
-  box-shadow: 2px 3px 20px black, 0 0 60px #8a4d0f inset;
-    background: #fffef0;
-}
 
-.read-more {
-  text-decoration: none;
-  color: rgb(0, 64, 255);
-  padding-bottom: 1rem;
-  border-radius: 1rem;
-  height: 28rem;
-}
 
-.read-more:hover {
-  box-shadow: 7px 7px 7px 7px rgba(0, 0, 0, 0.492);
-}
+
 
 .stats {
   text-align: center;
@@ -192,10 +77,6 @@ text-indent: 2rem;
   text-align: center;
   padding-top: 2rem;
 }
-.github {
-  width: 20px;
-  height: 20px;
-}
 .embeded-image {
   padding-top: 10px;
   max-width: 250px;
@@ -211,7 +92,7 @@ text-indent: 2rem;
   flex-direction: column-reverse;
 }
 
-@media screen and (min-width: 800px){
+/* @media screen and (min-width: 800px){
   .details-container {
     width: 100%;
     align-items: center;
@@ -227,7 +108,7 @@ text-indent: 2rem;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
   }
-}
+} */
 
 /* @media (prefers-color-scheme: dark) {
   body {
