--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -12,20 +12,18 @@
     color: white;
   overflow: hidden;
     height: 200px;
-    border-radius: 0 0 1rem 1rem;
+    border-radius: 1rem 1rem 0 0;
     margin: 0;
     padding: 1rem;
     text-align: center;
   }
 
   .about-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-auto-rows: minmax(250px, auto);
-    grid-gap: 1rem;
+    display: flex;
     margin: 0 auto;
     max-width: 1200px;
     padding: 1rem;
+    border-radius: 0 0 1rem 1rem;
   }
 
   .about-center {
