--- a/src/stylesheets/Header.css
+++ b/src/stylesheets/Header.css
@@ -1,18 +1,17 @@
-header {
-    width: 100%;
+.header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    background-color: rgb(180, 70, 70);
-    color: white;
-    padding: 1rem;
-  }
-  
-  header a {
+    align-items: center;
+    background-color: #b44646;
     color: white;
   }
   
-  header input {
+  .header a {
+    color: white;
+  }
+  
+  .header input {
     font-family: 'Noto Serif', Georgia, serif;
     font-weight: 100;
     padding: 6px;
