--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -1,10 +1,10 @@
 .about-container {
     padding-inline: 25%;
-    background-color: antiquewhite;
+    background-color: var(--white);
     flex-direction: column;
     margin: auto;
-    box-shadow: 2px 3px 20px black, 0 0 60px #8a4d0f inset;
-      background: #fffef0;
+    box-shadow: 2px 3px 20px black, 0 0 60px var(--parchment) inset;
+      background: var(--white);
   }
 
   .about-title {
