got the information to display and all is available in the add and edit modals

--- a/src/stylesheets/MonsterEditorModal.css
+++ b/src/stylesheets/MonsterEditorModal.css
@@ -11,3 +11,13 @@
     align-items: center;
     z-index: 2;
 }
+.edit-label {
+    color: white;
+}
+
+.edit-form-input {
+    border-bottom: solid thin white;
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+}
